[package]
name = "cryptoserver"
version = "0.1.0"
authors = ["James Welchman <james.welchman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.3"
murmurhash32 = "0.2.0"
lazy_static = "1.4.0"
sha2 = "0.9.1"
hmac = "0.9.0"
log = "0.4.11"
env_logger = "0.7.1"
async-h1 = "2.3.0"
http-types = "2.9.0"
